finetune/scripts/.ipynb_checkpoints/ag_news-checkpoint.err
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
